[package]
name = "ipdata"
version = "0.1.0"
edition = "2021"
description = "Official Rust client for the ipdata.co IP geolocation and threat intelligence API"
license = "MIT"
repository = "https://github.com/ipdata/rust"
keywords = ["ipdata", "geolocation", "ip", "api", "threat-intelligence"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
